Cleanup (typos; formatting)
GitOrigin-RevId: 35bf8b2c3b34e4f24e2d1a43176e9cdd0cbe1290