@@ -2,7 +2,6 @@
 package com.intellij.openapi.vfs.impl.local;
 
 import com.intellij.openapi.Disposable;
-import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.Disposer;
@@ -61,21 +60,20 @@ public class LocalFileSystemImpl extends LocalFileSystemBase implements Disposab
     myManagingFS = ManagingFS.getInstance();
     myWatcher = new FileWatcher(myManagingFS, () -> {
       AppExecutorUtil.getAppScheduledExecutorService().scheduleWithFixedDelay(() -> {
-        Application application = ApplicationManager.getApplication();
+        var application = ApplicationManager.getApplication();
         if (application != null && !application.isDisposed()) {
           storeRefreshStatusToFiles();
         }
       },
       STATUS_UPDATE_PERIOD, STATUS_UPDATE_PERIOD, TimeUnit.MILLISECONDS);
     });
-
     myWatchRootsManager = new WatchRootsManager(myWatcher, this);
     Disposer.register(ApplicationManager.getApplication(), this);
     new SymbolicLinkRefresher(this).refresh();
   }
 
   public void onDisconnecting() {
-    //on VFS reconnect we must clear roots manager
+    // on VFS reconnect, we must clear roots manager
     myWatchRootsManager.clear();
   }
 
@@ -154,15 +152,15 @@ public class LocalFileSystemImpl extends LocalFileSystemBase implements Disposab
     storeRefreshStatusToFiles();
 
     if (myWatcher.isOperational()) {
-      for (String root : myWatcher.getManualWatchRoots()) {
-        VirtualFile suspiciousRoot = findFileByPathIfCached(root);
+      for (var root : myWatcher.getManualWatchRoots()) {
+        var suspiciousRoot = findFileByPathIfCached(root);
         if (suspiciousRoot != null) {
           ((NewVirtualFile)suspiciousRoot).markDirtyRecursively();
         }
       }
     }
     else {
-      for (VirtualFile file : files) {
+      for (var file : files) {
         if (file.getFileSystem() == this) {
           ((NewVirtualFile)file).markDirtyRecursively();
         }
@@ -175,22 +173,23 @@ public class LocalFileSystemImpl extends LocalFileSystemBase implements Disposab
     return ContainerUtil.mapNotNull(getAliasedPaths(path), this::findFileByPathIfCached);
   }
 
-  // Finds paths that denote the same physical file (canonical path + symlinks)
-  // Returns [canonical_path + symlinks], if path is canonical
-  //         [path], otherwise
-  private @NotNull List<@NotNull @SystemDependent String> getAliasedPaths(@NotNull String path) {
+  // Finds paths that denote the same physical file (canonical path + symlinks).
+  // Returns `[canonical_path + symlinks]` if the path is canonical, `[path]` otherwise.
+  private List<@SystemDependent String> getAliasedPaths(String path) {
     path = FileUtil.toSystemDependentName(path);
-    List<@NotNull String> aliases = new ArrayList<>(getFileWatcher().mapToAllSymlinks(path));
+    var aliases = new ArrayList<>(getFileWatcher().mapToAllSymlinks(path));
     assert !aliases.contains(path);
     aliases.add(0, path);
     return aliases;
   }
 
   @Override
-  public @NotNull Set<WatchRequest> replaceWatchedRoots(@NotNull Collection<WatchRequest> watchRequestsToRemove,
-                                                        @Nullable Collection<String> recursiveRootsToAdd,
-                                                        @Nullable Collection<String> flatRootsToAdd) {
-    if (myDisposed) return Collections.emptySet();
+  public @NotNull Set<WatchRequest> replaceWatchedRoots(
+    @NotNull Collection<WatchRequest> watchRequestsToRemove,
+    @Nullable Collection<String> recursiveRootsToAdd,
+    @Nullable Collection<String> flatRootsToAdd
+  ) {
+    if (myDisposed) return Set.of();
 
     var nonNullWatchRequestsToRemove = ContainerUtil.skipNulls(watchRequestsToRemove);
     LOG.assertTrue(nonNullWatchRequestsToRemove.size() == watchRequestsToRemove.size(), "watch requests collection should not contain `null` elements");
@@ -201,9 +200,10 @@ public class LocalFileSystemImpl extends LocalFileSystemBase implements Disposab
                                           "\n  flat: " + (flatRootsToAdd != null ? flatRootsToAdd : "[]")));
     }
 
-    return myWatchRootsManager.replaceWatchedRoots(nonNullWatchRequestsToRemove,
-                                                   requireNonNullElse(recursiveRootsToAdd, Collections.emptyList()),
-                                                   requireNonNullElse(flatRootsToAdd, Collections.emptyList()));
+    return myWatchRootsManager.replaceWatchedRoots(
+      nonNullWatchRequestsToRemove,
+      requireNonNullElse(recursiveRootsToAdd, List.of()),
+      requireNonNullElse(flatRootsToAdd, List.of()));
   }
 
   @Override
@@ -224,11 +224,13 @@ public class LocalFileSystemImpl extends LocalFileSystemBase implements Disposab
   }
 
   @ApiStatus.Internal
-  public final void symlinkUpdated(int fileId,
-                                   @Nullable VirtualFile parent,
-                                   @NotNull CharSequence name,
-                                   @NotNull String linkPath,
-                                   @Nullable String linkTarget) {
+  public final void symlinkUpdated(
+    int fileId,
+    @Nullable VirtualFile parent,
+    @NotNull CharSequence name,
+    @NotNull String linkPath,
+    @Nullable String linkTarget
+  ) {
     if (linkTarget == null || !isRecursiveOrCircularSymlink(parent, name, linkTarget)) {
       myWatchRootsManager.updateSymlink(fileId, linkPath, linkTarget);
     }
@@ -250,11 +252,11 @@ public class LocalFileSystemImpl extends LocalFileSystemBase implements Disposab
     if (startsWith(parent, name, symlinkTarget)) return true;
     if (!(parent instanceof VirtualFileSystemEntry)) return false;
     // check if it's circular - any symlink above resolves to my target too
-    for (VirtualFileSystemEntry p = (VirtualFileSystemEntry)parent; p != null; p = p.getParent()) {
+    for (var p = (VirtualFileSystemEntry)parent; p != null; p = p.getParent()) {
       // if the file has no symlinks up the hierarchy, it's not circular
       if (!p.thisOrParentHaveSymlink()) return false;
       if (p.is(VFileProperty.SYMLINK)) {
-        String parentResolved = p.getCanonicalPath();
+        var parentResolved = p.getCanonicalPath();
         if (symlinkTarget.equals(parentResolved)) return true;
       }
     }
@@ -263,7 +265,6 @@ public class LocalFileSystemImpl extends LocalFileSystemBase implements Disposab
 
   private static boolean startsWith(@Nullable VirtualFile parent, CharSequence name, String symlinkTarget) {
     // parent == null means name is root
-    //noinspection StaticMethodReferencedViaSubclass
     return parent != null ? VfsUtilCore.isAncestorOrSelf(StringUtil.trimEnd(symlinkTarget, "/" + name), parent)
                           : StringUtil.equal(name, symlinkTarget, SystemInfo.isFileSystemCaseSensitive);
   }
